<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appbodega.mobile.catalogo_snacks">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_snack"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        app:cardBackgroundColor="@color/orange_low"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/img_cerrar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titulo_snack"
                    style="@style/titulos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_snacks"/>


                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/searchview_background"
                    android:queryHint="Buscar snack..." />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Registrar"
                    android:textSize="15sp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Eliminar"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_snack_categoria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_snack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_doritos"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="7"
                android:background="@drawable/rounded_layout"
                app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
                app:layout_constraintTop_toTopOf="@+id/cv_snack_categoria">

                <ImageView
                    android:id="@+id/img_doritos1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:src="@drawable/doritos1"
                    app:layout_constraintStart_toStartOf="@+id/ll_doritos"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle_imageview" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_producto"
                        style="@style/clave_producto"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack_doritos"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_doritos"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>


                </LinearLayout>


                <TextView
                    style="@style/estilo_precio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="4"
                    android:text="@string/precio_doritos" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_inkaChips"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="7"
                android:background="@drawable/rounded_layout">

                <ImageView
                    android:id="@+id/img_inkaChips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:src="@drawable/inkachips"
                    app:layout_constraintStart_toStartOf="@+id/ll_inkaChips"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:layout_margin="3dp"
                    android:background="@drawable/circle_imageview" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_producto"
                        style="@style/clave_producto"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack_inkachips"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_inkachips"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_picaras"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="7"
                android:background="@drawable/rounded_layout">

                <ImageView
                    android:id="@+id/img_picaras"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:src="@drawable/picaras"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:layout_margin="3dp"
                    app:layout_constraintStart_toStartOf="@+id/ll_picaras"
                    android:background="@drawable/circle_imageview" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="4"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre_producto"
                        style="@style/clave_producto"
                        android:layout_gravity="start"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack_picaras"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_picaras"
                        style="@style/valor_producto"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        style="@style/clave_producto"
                        android:layout_gravity="start"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Atras"
            android:textSize="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>